# mlops-labs

./: .gitignore  .gitlab-ci.yml  Dockerfile.MLFLOW  Makefile  Readme.md  docker-compose.yaml  dvc.yaml  params.yaml
.dvc/: config
.github/workflows/: ci.yml  release.yml
app/: .dockerignore  .flake8  Dockerfile  Makefile  main.py  pyproject.toml
app/src/: model_service.py  preprocess.py  schemas.py
app/src/routers/internal/: test_router.py
app/tests/: test_api.py  test_preprocess.py
dvc-workaround/: split.py  train_models.py
eda/: eda.ipynb
models/: .gitignore
reports/: gx_validation.json  metrics.json
scripts/: load_data.py  preprocess.py  train.py  validate_data.py
task/: task1-2.md
